fixed alignment of client boxes

--- a/src/components/ClientList/ClientList.css
+++ b/src/components/ClientList/ClientList.css
@@ -3,9 +3,9 @@
     border-radius: 10px;
     padding: 15px;
     margin: 10px;
-    flex: 0 0 200px; 
     text-align: center;
     height: 100px;
+    width: 200px;
 }
 
 .button-container {
